<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/light_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/light_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/icon_descriptor"
                android:tint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_highlight_black_24dp" />

            <TextView
                android:id="@+id/light_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/light_icon"
                android:text="@string/placeholder_light_name"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/light_state_switch"
                app:layout_constraintStart_toEndOf="@+id/light_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/light_state_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/light_name"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/light_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/light_name"
                android:layout_toEndOf="@id/light_icon"
                android:text="@string/placeholder_light_address"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/light_name"
                app:layout_constraintTop_toBottomOf="@+id/light_name" />

            <SeekBar
                android:id="@+id/light_level_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/light_address"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/light_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/light_name"
                app:layout_constraintTop_toBottomOf="@+id/light_address" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>